# recap

./: .gitignore  CLAUDE.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml
.claude/: settings.local.json
docs/: plan.md
src/recap/: __init__.py  server.py
src/recap/static/: app.js  index.html
static/: app.js  index.html  review-override.css  style.css
